tests/comp/sem/valid/class_with_fields_and_methods.mj
class A {

	public int name;

	public int name(){
		return this.name;
	}

	public static void main(String[] args) {
	}

}
