tests/comp/sem/invalid/return_ref_from_int.mj
class A {


	/*** public int test(A foo) { return foo; } ***/

	public static void main(String[] args) {
	}

}
